--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,6 @@
-# Prerequisites
-*.d
+{
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+ "version" : 1.16,
+ "url" :"https://ulucevberkay.github.io/KozaAltinCode/firmware_1.16.bin"
 
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+}
